Changing class names and adding new ones

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 4.8
+ * @version 4.9
  */
 
 /* Main Background */
@@ -148,15 +148,15 @@
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #18E 30%, #000 80%);
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, rgb(17, 136, 238, .6) 30%, rgba(0, 0, 0, .6) 80%);
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ:hover {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N:hover {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #18E 30%, #000000 80%);
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N {
     background-color: transparent !important;
 }
 
@@ -361,13 +361,13 @@
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #d12 30%, rgba(0, 0, 0, .6) 80%);
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM {
+.lookFilled-1H2Jvj.colorRed-2VFhM4 {
     color: white;
     background-color: transparent !important;
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, rgb(221, 17, 34, .6) 30%, rgba(0, 0, 0, .6) 80%);
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM:hover {
+.lookFilled-1H2Jvj.colorRed-2VFhM4:hover {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #d12 30%, rgba(0, 0, 0, .6) 80%);
 }
 
@@ -417,17 +417,17 @@
     color: white;
 }
 
-.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-2vcLsa .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-color: transparent;
     background-image: -webkit-linear-gradient(56deg, #000000 24%, #991121 100%);
     border: 2px solid #C13;
 }
 
-.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl):not(.side-1lrxIh .item-2GWPIy[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"]), .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl):not(.side-1lrxIh .item-2GWPIy[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"]), .topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: #C13;
 }
 
-.card-16VQ8C {
+.card-2guEcY {
     border-width: 2px;
     border-radius: 8px;
 }
@@ -534,12 +534,12 @@
     background-color: rgba(0,0,0,.3);
 } 
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79 {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, rgb(34, 187, 85, .6) 30%, rgba(0, 0, 0, .6) 80%);
     background-color: transparent;
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79:hover {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS:hover {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #2B5 30%, #000 80%);
 }
 
@@ -790,29 +790,29 @@
     border-radius: 7px;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span, .theme-dark .dim-2Uxgxb span {
+.theme-dark .combo-3PNrpQ span, .theme-dark .dim-GXxpGm span {
     color: white;
     box-shadow: none;
     background-color: #912;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 {
+.theme-dark .combo-3PNrpQ {
     color: white;
 }
 
-.keybindShortcut-3zF1P9 {
+.combo-3PNrpQ {
     text-transform: capitalize;
     font-weight: 200;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span:active {
+.theme-dark .combo-3PNrpQ span:active {
     color: white;
     box-shadow: none;
     border: 2px solid #C13;
     background-color: #912;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span .bindArrow-EmK4SC g, .theme-dark .keybindShortcut-3zF1P9 span:active .bindArrow-EmK4SC g {
+.theme-dark .combo-3PNrpQ span .bindArrow-L3Mvw5 g, .theme-dark .combo-3PNrpQ span:active .bindArrow-L3Mvw5 g {
     fill:  white;
 }
 
@@ -1843,7 +1843,7 @@
     font-weight: bold;
 }
 
-.avatarSpeaking-33RRJU {
+.avatarSpeaking-36V2PN {
     border-radius: 5px;
 }
 
@@ -2792,7 +2792,7 @@
     color: white;
 }
 
-.pinIcon-zVODC5 {
+.pinIcon-3I5-gm {
     background-color: black;
 }
 
@@ -2977,8 +2977,8 @@ border-top-color: #912;
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
@@ -3124,7 +3124,7 @@ border-top-color: #912;
     background-color: transparent !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: var(--brand-500);"] {
+.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
     background-color: #912 !important;
 }
 
@@ -3587,12 +3587,12 @@ border-top-color: #912;
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
+.top-Ktfr_T .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -4247,6 +4247,33 @@ border-top-color: #912;
 
 .resizeHandle-PBRzPC {
     background: none;
+}
+
+.stageUpsell-hekoJb {
+    border: 2px solid rgba(255, 255, 255, .2);
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.stageUpsellImage-2C_WNd {
+    background-color: transparent;
+}
+
+.permissionV3BannerContainer-3_4aSa {
+    background-color: black;
+}
+
+.permissionV3BannerContainer-3_4aSa a {
+    color: #B8E8E0;
+}
+
+.theme-dark .message-G6O-Wv {
+    background-color: transparent;
+    border: 1px solid #0A52B0;
+    box-shadow: none;
+}
+
+.footer-IubaaS {
+    background-color: transparent;
 }
 
 
