--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 4.4
+ * @version 4.5
  */
 
 /* Main Background */
@@ -118,12 +118,12 @@
    font-size: 13px;
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ, .lookFilled-yCfaCM.colorBrand-I6CyqQ:disabled {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N, .lookFilled-1H2Jvj.colorBrand-2M3O3N:disabled {
     color: #fff;
     background-color: rgba(17, 135, 238, .4);
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ:hover {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N:hover {
     background-color: #18E;
 }
 
@@ -159,7 +159,7 @@
     font-weight: bold;
 }
 
-.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl):not(.side-1lrxIh .item-2GWPIy[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"]), .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl):not(.side-1lrxIh .item-2GWPIy[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"]), .topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: rgba(17, 187, 204, .4);
 }
 
@@ -207,7 +207,7 @@
     font-size: 19px;
 }
 
-.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-2vcLsa .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-image: -webkit-repeating-linear-gradient(112deg, #22a9bb 31%, #000000 36%);
     border: 2px solid #2AB;
 }
@@ -394,18 +394,18 @@
     font-weight: bold;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span {
+.theme-dark .combo-3PNrpQ span {
     color: white;
     box-shadow: none;
 }
 
-.keybindShortcut-3zF1P9 span, .theme-dark .dim-2Uxgxb span {
+.combo-3PNrpQ span, .theme-dark .dim-GXxpGm span {
     background-color: rgba(34, 170, 187, .6);
     border: 1px solid #2AB;
     border-radius: 8px;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span:active {
+.theme-dark .combo-3PNrpQ span:active {
     color: white;
     box-shadow: none;
     border: 2px solid #1BC;
@@ -526,11 +526,11 @@
     background-color: rgba(0,0,0,.3);
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79 {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS {
     background-color: rgba(34, 187, 85, .6);
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79:hover {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS:hover {
     background-color: #2B5;
 }
 
@@ -725,11 +725,11 @@
     background-color: transparent;
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM {
+.lookFilled-1H2Jvj.colorRed-2VFhM4 {
     background-color: rgba(221, 17, 34, .5);
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM:hover {
+.lookFilled-1H2Jvj.colorRed-2VFhM4:hover {
     background-color: #D12;
 }
 
@@ -1761,7 +1761,7 @@
     font-weight: bold;
 }
 
-.avatarSpeaking-33RRJU {
+.avatarSpeaking-36V2PN {
     border-radius: 5px;
 }
 
@@ -1819,11 +1819,11 @@
     background-color: transparent;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, .top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:active, .top-Ktfr_T .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #2AB;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: #1BC;
 }
 
@@ -2703,7 +2703,7 @@
     color: white;
 }
 
-.pinIcon-zVODC5 {
+.pinIcon-3I5-gm {
     background-color: black;
 }
 
@@ -2887,8 +2887,8 @@
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
@@ -3044,7 +3044,7 @@
     background-color: transparent !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: var(--brand-500);"] {
+.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
     background-color: #2AB !important;
 }
 
@@ -3478,12 +3478,12 @@
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
+.top-Ktfr_T .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -4151,6 +4151,33 @@
 
 .resizeHandle-PBRzPC {
     background: none;
+}
+
+.stageUpsell-hekoJb {
+    border: 2px solid rgba(255, 255, 255, .2);
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.stageUpsellImage-2C_WNd {
+    background-color: transparent;
+}
+
+.permissionV3BannerContainer-3_4aSa {
+    background-color: black;
+}
+
+.permissionV3BannerContainer-3_4aSa a {
+    color: #B8E8E0;
+}
+
+.theme-dark .message-G6O-Wv {
+    background-color: transparent;
+    border: 1px solid #0A52B0;
+    box-shadow: none;
+}
+
+.footer-IubaaS {
+    background-color: transparent;
 }
 /* Main Color */
 .main-color{color: #2AB;}
