--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 4.4
+ * @version 4.5
  */
 
 /* Main Background */
@@ -111,11 +111,11 @@
     background-color: #F44;
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N {
     background-color: #18E;
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ:hover {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N:hover {
     background-color: rgba(17, 131, 231, .5);
 }
 
@@ -130,11 +130,11 @@
     background-color: #F44;
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79 {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS {
     background-color: #2B5;
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79:hover {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS:hover {
     background-color: rgba(37, 181, 88, .5);
 }
 
@@ -282,7 +282,7 @@
     border-color: transparent;
 }
 
-.item-1OdjEX {
+.item-5ApiZt {
     border-radius: 5px;
     text-transform: lowercase;
 }
@@ -313,7 +313,7 @@
     border-radius: 6px;
 }
 
-.avatarSpeaking-33RRJU {
+.avatarSpeaking-36V2PN {
     box-shadow: none;
     border: 2px solid #F44;
 }
@@ -328,11 +328,11 @@
     background-color: rgba(221, 17, 34, .5);
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM {
+.lookFilled-1H2Jvj.colorRed-2VFhM4 {
     background-color: #D12;
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM:hover {
+.lookFilled-1H2Jvj.colorRed-2VFhM4:hover {
     background-color: rgba(221, 17, 34, .5);
     border: 2px solid #D12;
 }
@@ -352,14 +352,14 @@
     font-weight: bold;
 }
 
-.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-2vcLsa .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-image: -webkit-linear-gradient(121deg, transparent 33%, #f44 64%) !important;
     border: 1px solid #F44;
     background-color: transparent !important;
 }
 
 
-.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), .topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: #C67;
 }
 
@@ -662,38 +662,38 @@
     background-color: rgba(0,0,0,.2);
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span {
+.theme-dark .combo-3PNrpQ span {
     color: #f44;
     box-shadow: none;
 }
 
-.keybindShortcut-3zF1P9 span, .theme-dark .dim-2Uxgxb span {
+.combo-3PNrpQ span, .theme-dark .dim-GXxpGm span {
     background-color: rgba(255, 68, 68, .5);
     border: 2px solid black;
     padding: 3px 7px;
     border-radius: 7px;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 {
+.theme-dark .combo-3PNrpQ {
     color: #f44;
     text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 12px black;
 }
 
-.keybindShortcut-3zF1P9 {
+.combo-3PNrpQ {
     line-height: 11px;
     text-transform: capitalize;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span:active {
+.theme-dark .combo-3PNrpQ span:active {
     color: white;
     background-color: #F44;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span .bindArrow-EmK4SC g {
+.theme-dark .combo-3PNrpQ span .bindArrow-L3Mvw5 g {
     fill: #f44;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span:active .bindArrow-EmK4SC g {
+.theme-dark .combo-3PNrpQ span:active .bindArrow-L3Mvw5 g {
     color: white;
 }
 
@@ -1041,7 +1041,7 @@ background-color: transparent  !important;
     border-color: #F44;
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ:disabled {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N:disabled {
     background-color: #18E;
 }
 
@@ -2000,7 +2000,7 @@ background-color: transparent  !important;
     background-color: #f44;
 }
 
-.close-1mLglB {
+.close-A4ZfTI {
     opacity: 1;
     color: white;
 }
@@ -2085,7 +2085,7 @@ background-color: transparent  !important;
     border: 1px solid #C67;
 }
 
-.avatar-3FKimL, .avatarSpeaking-33RRJU {
+.avatar-3FKimL, .avatarSpeaking-36V2PN {
     border-radius: 5px;
 }
 
@@ -2391,11 +2391,11 @@ background-color: transparent  !important;
     background-color: transparent;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, .top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:active, .top-Ktfr_T .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #f44;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: #C67;
 }
 
@@ -2991,7 +2991,7 @@ background-color: transparent  !important;
     color: white;
 }
 
-.pinIcon-zVODC5 {
+.pinIcon-3I5-gm {
     background-color: black;
 }
 
@@ -3175,8 +3175,8 @@ border-top-color: #f44;
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
@@ -3331,7 +3331,7 @@ border-top-color: #f44;
     background-color: transparent !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: var(--brand-500);"] {
+.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
     background-color: #F44 !important;
 }
 
@@ -3775,12 +3775,12 @@ border-top-color: #f44;
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
+.top-Ktfr_T .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -4439,6 +4439,27 @@ border-top-color: #f44;
 
 .resizeHandle-PBRzPC {
     background: none;
+}
+
+.stageUpsell-hekoJb {
+    border: 2px solid rgba(255, 255, 255, .2);
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.stageUpsellImage-2C_WNd {
+    background-color: transparent;
+}
+
+.permissionV3BannerContainer-3_4aSa {
+    background-color: black;
+}
+
+.permissionV3BannerContainer-3_4aSa a {
+    color: #B8E8E0;
+}
+
+.footer-IubaaS {
+    background-color: transparent;
 }
 /* Main Color */
 .main-color{color: #F44;}
