--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 4.4
+ * @version 4.5
  */
 
  #app-mount .app-2CXKsg {
@@ -159,7 +159,7 @@
   border-radius: 5px;
   background-color: rgba(0, 0, 0, .17) !important;
 }
-.customItem-2CxBSo {
+.customItem-1KYL7t {
   border-color: transparent;
   color: white;
 }
@@ -374,14 +374,14 @@
   fill: white;
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79, .lookFilled-yCfaCM.colorGreen-3y-Z79:disabled,
+.lookFilled-1H2Jvj.colorGreen-jIPCAS, .lookFilled-1H2Jvj.colorGreen-jIPCAS:disabled,
 .lookInverted-2mDUMi.colorGreen-3y-Z79, .lookOutlined-3yKVGo.colorGreen-3y-Z79,
 .theme-dark .join-33Tr-7 .actionButton-2PeQbJ {
   color: #fff;
   background-color: #228f4f;
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79:hover, .lookInverted-2mDUMi.colorGreen-3y-Z79:hover,
+.lookFilled-1H2Jvj.colorGreen-jIPCAS:hover, .lookInverted-2mDUMi.colorGreen-3y-Z79:hover,
 .lookOutlined-3yKVGo.colorGreen-3y-Z79:hover, .theme-dark .join-33Tr-7:hover .actionButton-2PeQbJ {
   background-color: #15a952;
 }
@@ -405,11 +405,11 @@
   color: white;
 }
 
-.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover, .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover, .topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover {
   background-color: rgba(173, 57, 80, .3);
 }
 
-.topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy,
+.topPill-2vcLsa .themed-qqoYp3.selected-1sf9UK.item-2GWPIy,
 .theme-dark .header-145e10 .tabBar-1qdMr5 .tab-TRrPC8.active-1grPyy {
   background-color: #9b2742 !important;
   border: 1px solid black !important;
@@ -423,7 +423,7 @@
   border-left: none;
 }
 
-.topPill-3DJJNV .item-2GWPIy {
+.topPill-2vcLsa .item-2GWPIy {
   border: 1px solid transparent;
 }
 
@@ -513,13 +513,13 @@
   border-radius: 5px !important;
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ, .lookFilled-yCfaCM.colorBrand-I6CyqQ:disabled,
+.lookFilled-1H2Jvj.colorBrand-2M3O3N, .lookFilled-1H2Jvj.colorBrand-2M3O3N:disabled,
 .lookOutlined-3yKVGo.colorBrand-I6CyqQ, .lookInverted-2mDUMi.colorBrand-I6CyqQ {
   color: #fff;
   background-color: #1f2cbd;
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ:hover, .lookInverted-2mDUMi.colorBrand-I6CyqQ:hover,
+.lookFilled-1H2Jvj.colorBrand-2M3O3N:hover, .lookInverted-2mDUMi.colorBrand-I6CyqQ:hover,
 .lookOutlined-3yKVGo.colorBrand-I6CyqQ:hover, .theme-dark .create-3jownz:hover .actionButton-2PeQbJ {
   background-color: #3443ea !important;
 }
@@ -551,12 +551,12 @@
   box-shadow: none;
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM, .lookOutlined-3yKVGo.colorRed-rQXKgM {
+.lookFilled-1H2Jvj.colorRed-2VFhM4, .lookOutlined-3yKVGo.colorRed-rQXKgM {
   color: #fff;
   background-color: #bc0c0c;
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM:hover, .lookOutlined-3yKVGo.colorRed-rQXKgM:hover {
+.lookFilled-1H2Jvj.colorRed-2VFhM4:hover, .lookOutlined-3yKVGo.colorRed-rQXKgM:hover {
   background-color: #df0c0c;
 }
 
@@ -1010,7 +1010,7 @@
   background: rgba(155, 39, 66, .7);
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, .top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:active, .top-Ktfr_T .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
   border-bottom-color: #9b2742;
 }
 
@@ -1271,7 +1271,7 @@
   background-color: transparent !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: var(--brand-500);"] {
+.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
   background-color:  #9b2742 !important; 
 }
 
@@ -1371,7 +1371,7 @@
   opacity: 1;
 }
 
-.theme-dark .dim-2Uxgxb .key-N5VmHN {
+.theme-dark .dim-GXxpGm .key-RP8gj3 {
   background-color: #9b2742;
 }
 
@@ -1443,27 +1443,27 @@
   color: silver;
 }
 
-.theme-dark .dim-2Uxgxb span {
+.theme-dark .dim-GXxpGm span {
   background-color: #9b2742;
   color: white !important;
 }
-.theme-dark .keybindShortcut-3zF1P9 span {
+.theme-dark .combo-3PNrpQ span {
   color: white !important;
   box-shadow: none;
   border: 1px solid #ad3950;
   background-color: #9b2742;
 }
 
-.keybindShortcut-3zF1P9 span {
+.combo-3PNrpQ span {
   border-radius: 4px;
 }
 
-.theme-dark .dim-2Uxgxb span:active {
+.theme-dark .dim-GXxpGm span:active {
   background-color: #9b2742;
   border: none;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span:active {
+.theme-dark .combo-3PNrpQ span:active {
   background-color: #9b2742;
   box-shadow: none;
   border: none;
@@ -1630,7 +1630,7 @@
 }
 
 .side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), 
-.topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
+.topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
   background-color: #ad3950;
 }
 
@@ -2770,7 +2770,7 @@
   mask: none;
 }
 
-.avatarSpeaking-33RRJU {
+.avatarSpeaking-36V2PN {
   box-shadow: inset 0 0 0 2px #9b2742,inset 0 0 0 3px black;
   border-radius: 5px;
 }
@@ -2892,7 +2892,7 @@
   border-bottom: none;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:hover {
   border-bottom-color: #ad3950;
 }
 
@@ -3391,7 +3391,7 @@
   color: white;
 }
 
-.pinIcon-zVODC5 {
+.pinIcon-3I5-gm {
   background-color: black;
 }
 
@@ -3575,8 +3575,8 @@ border-top-color: #9b2742;
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
@@ -4128,12 +4128,12 @@ border-top-color: #9b2742;
   background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
+.top-Ktfr_T .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:hover {
   border-bottom-color: silver;
 }
 
@@ -4801,4 +4801,25 @@ fill: white;
 
 .resizeHandle-PBRzPC {
   background: none;
+}
+
+.stageUpsell-hekoJb {
+  border: 2px solid rgba(255, 255, 255, .2);
+  background-color: rgba(0, 0, 0, .3);
+}
+
+.stageUpsellImage-2C_WNd {
+  background-color: transparent;
+}
+
+.permissionV3BannerContainer-3_4aSa {
+  background-color: black;
+}
+
+.permissionV3BannerContainer-3_4aSa a {
+  color: #B8E8E0;
+}
+
+.footer-IubaaS {
+  background-color: transparent;
 }
