--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 2.1
+ * @version 2.2
 */
 
 /* Rem Main Picture */
@@ -187,7 +187,7 @@
 }
 
 .side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, 
-.topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
+.topPill-2vcLsa .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-color: #6cb4fe !important;
 }
 
@@ -206,7 +206,7 @@
 }
 
 .side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), 
-.topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
+.topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: rgba(0,0,0,.1);
 }
 
@@ -221,12 +221,12 @@
     border-bottom: none;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, 
-.top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:active, 
+.top-Ktfr_T .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #6cb4fe;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: rgba(255, 255, 255, .6);
 }
 
@@ -245,7 +245,7 @@
     border-radius: 50px;
 }
 
-#app-mount .close-1mLglB {
+#app-mount .close-A4ZfTI {
     opacity: 1;
     color: white;
 }
@@ -574,7 +574,7 @@
     min-height: 17px;
 }
 
-.card-16VQ8C {
+.card-2guEcY {
     border-width: 3px;
 }
 
@@ -781,35 +781,35 @@
     background-color: rgba(0,0,0,.2);
 }
 
-.keybindShortcut-3zF1P9 {
+.combo-3PNrpQ {
     font-size: 11px;
     font-weight: 500;
 }
 
-.theme-dark .keybindShortcut-3zF1P9, 
-.theme-dark .keybindShortcut-3zF1P9 .key-N5VmHN {
+.theme-dark .combo-3PNrpQ, 
+.theme-dark .combo-3PNrpQ .key-RP8gj3 {
     color: white;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 .key-N5VmHN {
+.theme-dark .combo-3PNrpQ .key-RP8gj3 {
     box-shadow: inset 0 -4px 0 black;
 }
 
-.key-N5VmHN {
+.key-RP8gj3 {
     background-color: rgba(108, 180, 254, .6);
     border: 1px solid black;
     border-radius: 30px;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 .key-N5VmHN:active {
+.theme-dark .combo-3PNrpQ .key-RP8gj3:active {
     color: white;
     box-shadow: inset 0 -2px 0 black;
     border: 1px solid black;
     background-color: #6cb4fe;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 .key-N5VmHN .bindArrow-EmK4SC g,
-.theme-dark .keybindShortcut-3zF1P9 .key-N5VmHN:active .bindArrow-EmK4SC g {
+.theme-dark .combo-3PNrpQ .key-RP8gj3 .bindArrow-L3Mvw5 g,
+.theme-dark .combo-3PNrpQ .key-RP8gj3:active .bindArrow-L3Mvw5 g {
     fill: white;
 }
 
@@ -1087,7 +1087,7 @@
     border-radius: 4px;
 }
 
-.item-1OdjEX {
+.item-5ApiZt {
     border-radius: 4px;
     font-size: 13px;
 }
@@ -1601,8 +1601,8 @@
     border-bottom: none;
 }
 
-.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
+.top-Ktfr_T .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #6cb4fe;
 }
 
@@ -1614,7 +1614,7 @@
     border-top: none;
 }
 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -1848,7 +1848,7 @@
     border-bottom-color: transparent;
 }
 
-.theme-dark .dim-2Uxgxb .key-N5VmHN {
+.theme-dark .dim-GXxpGm .key-RP8gj3 {
     background-color: #6cb4fe;
 }
 
@@ -1995,7 +1995,7 @@
 }
   
 /* Progress Fill */
-.progressBar-1T6LYX[style*="background-color: var(--brand-500);"] {
+.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
     background-color: #6cb4fe !important;
 }
 
@@ -2208,7 +2208,7 @@
     background-color: rgba(255, 255, 255, .2);
 }
 
-.clickable-28SzVr:hover .layout-1qmrhw .username-u-ebrn,
+.clickable-28SzVr:hover .layout-1qmrhw .username-3_PJ5r,
 .clickable-28SzVr:hover .layout-1qmrhw .activity-2EQDZv {
     color: white !important;
 }
@@ -2218,7 +2218,7 @@
     background-color: #6cb4fe;
 }
 
-.selected-1-Z6gm .layout-1qmrhw .username-u-ebrn,
+.selected-1-Z6gm .layout-1qmrhw .username-3_PJ5r,
 .selected-1-Z6gm .layout-1qmrhw .activity-2EQDZv {
     color: black !important;
 }
@@ -2649,7 +2649,7 @@
 
 .border-2Vy6FN.speaking-7QZEkv,
 .avatarSpeaking-2pCGrZ,
-.avatarSpeaking-33RRJU {
+.avatarSpeaking-36V2PN {
     box-shadow: inset 0 0 0 2px #6cb4fe,inset 0 0 0 4px black;
 }
 
@@ -2800,7 +2800,7 @@
 }
 
 .countContainer-3DOo5v,
-.pinIcon-zVODC5 {
+.pinIcon-3I5-gm {
     background-color: #6cb4fe;
     border-radius: 4px;
 }
@@ -2980,8 +2980,8 @@
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
@@ -4183,4 +4183,25 @@
 
 .resizeHandle-PBRzPC {
     background: none;
+}
+
+.stageUpsell-hekoJb {
+    border: 2px solid rgba(255, 255, 255, .2);
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.stageUpsellImage-2C_WNd {
+    background-color: transparent;
+}
+
+.permissionV3BannerContainer-3_4aSa {
+    background-color: black;
+}
+
+.permissionV3BannerContainer-3_4aSa a {
+    color: #B8E8E0;
+}
+
+.footer-IubaaS {
+    background-color: transparent;
 }
