--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 1.6
+ * @version 1.7
 */
 
 .app-2CXKsg, 
@@ -87,7 +87,7 @@
 }
 
 .side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, 
-.topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
+.topPill-2vcLsa .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-color: #FF0000 !important;
 }
 
@@ -96,7 +96,7 @@
     color: white !important;
 }
 
-.topPill-3DJJNV .item-2GWPIy,
+.topPill-2vcLsa .item-2GWPIy,
 .side-1lrxIh .item-2GWPIy {
     border-radius: 5px;
 }
@@ -108,7 +108,7 @@
 }
 
 .side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), 
-.topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
+.topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: rgba(255, 255, 255, .2);
 }
 
@@ -396,8 +396,8 @@
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
@@ -449,7 +449,7 @@
     background-color: rgba(255, 0, 0, .3);
 }
 
-.top-K_jibn .item-2GWPIy {
+.top-Ktfr_T .item-2GWPIy {
     background: none;
 }
 
@@ -457,12 +457,12 @@
     border-bottom: none;
 }
 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: rgba(255, 255, 255, .2);
 }
 
-.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
+.top-Ktfr_T .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #FF0000;
 }
 
@@ -542,7 +542,7 @@
     color: #F1F1F1;
 }
 
-.theme-dark .close-1mLglB {
+.theme-dark .close-A4ZfTI {
     opacity: 1;
     color: white;
 }
@@ -627,7 +627,7 @@
 
 .clickable-28SzVr.container-1oeRFJ:hover, 
 .clickable-28SzVr.container-1oeRFJ:hover .muted-14PyqW,
-.clickable-28SzVr:hover .layout-1qmrhw .username-u-ebrn,
+.clickable-28SzVr:hover .layout-1qmrhw .username-3_PJ5r,
 .clickable-28SzVr:hover .layout-1qmrhw .activity-2EQDZv {
     color: #F1F1F1 !important;
 }
@@ -643,7 +643,7 @@
 .clickable-28SzVr.container-1oeRFJ:active, 
 .highlighted-3PcOfB.container-1oeRFJ, 
 .selected-1-Z6gm.container-1oeRFJ,
-.selected-1-Z6gm .layout-1qmrhw .username-u-ebrn,
+.selected-1-Z6gm .layout-1qmrhw .username-3_PJ5r,
 .selected-1-Z6gm .layout-1qmrhw .activity-2EQDZv {
     color: #0F0F0F !important;
     font-weight: 600;
@@ -810,7 +810,7 @@
     background-color: #FF0000;
 }
 
-.customItem-2CxBSo {
+.customItem-1KYL7t {
     color: white;
     border-color: transparent;
 }
@@ -1129,31 +1129,31 @@
     border-top: 7px solid #282828;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 {
+.theme-dark .combo-3PNrpQ {
     color: #F1F1F1;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 .key-N5VmHN {
+.theme-dark .combo-3PNrpQ .key-RP8gj3 {
     color: #F1F1F1;
     box-shadow: inset 0 -4px 0 black;
     background-color: #FF0000;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 .key-N5VmHN .bindArrow-EmK4SC g {
+.theme-dark .combo-3PNrpQ .key-RP8gj3 .bindArrow-L3Mvw5 g {
     fill: #F1F1F1;
 }
 
-.key-N5VmHN {
+.key-RP8gj3 {
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.theme-dark .keybindShortcut-3zF1P9 .key-N5VmHN:active {
+.theme-dark .combo-3PNrpQ .key-RP8gj3:active {
     color: white;
     box-shadow: inset 0 -2px 0 black;
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.theme-dark .keybindShortcut-3zF1P9 .key-N5VmHN:active .bindArrow-EmK4SC g {
+.theme-dark .combo-3PNrpQ .key-RP8gj3:active .bindArrow-L3Mvw5 g {
     fill: white;
 }
 
@@ -2337,12 +2337,12 @@
     border-bottom: none;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: rgba(255, 255, 255, .2);
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, 
-.top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:active, 
+.top-Ktfr_T .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #FF0000;
 }
 
@@ -2406,7 +2406,7 @@
     background-color: transparent !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: var(--brand-500);"] {
+.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
     background-color: #FF0000 !important;
 }
 
@@ -2832,7 +2832,7 @@
 }
 
 .border-2Vy6FN.speaking-7QZEkv,
-.avatarSpeaking-33RRJU,
+.avatarSpeaking-36V2PN,
 .avatarSpeaking-2pCGrZ {
     box-shadow: inset 0 0 0 2px #FF0000,inset 0 0 0 4px black;
 }
@@ -4286,4 +4286,25 @@
 
 .resizeHandle-PBRzPC {
     background: none;
+}
+
+.stageUpsell-hekoJb {
+    border: 2px solid rgba(255, 255, 255, .2);
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.stageUpsellImage-2C_WNd {
+    background-color: transparent;
+}
+
+.permissionV3BannerContainer-3_4aSa {
+    background-color: black;
+}
+
+.permissionV3BannerContainer-3_4aSa a {
+    color: #B8E8E0;
+}
+
+.footer-IubaaS {
+    background-color: transparent;
 }
