--- a/My_Theme_Collection/BubbleThemev3.theme.css
+++ b/My_Theme_Collection/BubbleThemev3.theme.css
@@ -2,7 +2,7 @@
  * @name Bubble Theme v3
  * @author ShadowDevilsAvenged
  * @description Bubbles, Bubbles and more Bubbles.
- * @version 3.5
+ * @version 3.6
  */
 
  .app-2CXKsg {
@@ -278,7 +278,7 @@
 }
 
 
-.item-1OdjEX {
+.item-5ApiZt {
     border-radius: 50px;
     font-size: 14px;
 }
@@ -394,8 +394,8 @@
 }
 
 .lookOutlined-3yKVGo.colorGreen-3y-Z79, 
-.lookFilled-yCfaCM.colorGreen-3y-Z79, 
-.lookFilled-yCfaCM.colorGreen-3y-Z79:disabled {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS, 
+.lookFilled-1H2Jvj.colorGreen-jIPCAS:disabled {
     box-shadow: inset 1px 2px 1px 3px rgba(58, 166, 85, 0.33), inset -12px -8px 14px -6px rgba(58, 166, 85, 0.63) !important;
     background-image: radial-gradient(circle closest-side at 9px 9px, rgba(255, 255, 255) 10%, rgba(58, 166, 85, 0.18) 100%, rgba(58, 166, 85, 0.18) 100%) !important;
     border: none !important;
@@ -404,9 +404,9 @@
 }
 
 .lookOutlined-3yKVGo.colorBrand-I6CyqQ, 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ, 
+.lookFilled-1H2Jvj.colorBrand-2M3O3N, 
 .lookInverted-2mDUMi.colorBrand-I6CyqQ, 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ:disabled {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N:disabled {
     box-shadow: inset 1px 2px 1px 3px rgba(69, 112, 230, 0.33), inset -12px -8px 14px -6px rgba(69, 112, 230, 0.63) !important;
     background-image: radial-gradient(circle closest-side at 9px 9px, rgba(255, 255, 255) 10%, rgba(69, 112, 230, 0.18) 100%, rgba(69, 112, 230, 0.18) 100%) !important;
     border: none !important;
@@ -415,7 +415,7 @@
 }
 
 .lookOutlined-3yKVGo.colorRed-rQXKgM, 
-.lookFilled-yCfaCM.colorRed-rQXKgM {
+.lookFilled-1H2Jvj.colorRed-2VFhM4 {
     box-shadow: inset 1px 2px 1px 3px rgba(238, 17, 17, 0.33), inset -12px -8px 14px -6px rgba(238, 17, 17, 0.63) !important;
     background-image: radial-gradient(circle closest-side at 9px 9px, rgba(255, 255, 255) 10%, rgba(238, 17, 17, 0.18) 100%, rgba(238, 17, 17, 0.18) 100%) !important;
     border: none !important;
@@ -489,7 +489,7 @@
     box-shadow: none;
 }
 
-.avatarSpeaking-2pCGrZ, .avatarSpeaking-33RRJU {
+.avatarSpeaking-2pCGrZ, .avatarSpeaking-36V2PN {
     box-shadow: inset 0 0 0 2px #00aba9,inset 0 0 0 3px black;
 }
 
@@ -685,7 +685,7 @@
     background-color: blue !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: var(--brand-500);"] {
+.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
     background-color: #76AAD9 !important;
 }
 
@@ -746,7 +746,7 @@
     border-radius: 50px;
 }
 
-.topPill-3DJJNV .item-2GWPIy {
+.topPill-2vcLsa .item-2GWPIy {
     border-radius: 50px;
 }
 
@@ -1154,29 +1154,29 @@
     border-bottom-color: transparent;
 }
 
-#app-mount .dim-2Uxgxb span {
+#app-mount .dim-GXxpGm span {
     background-image: radial-gradient(circle closest-side at 10px 10px, rgba(255, 255, 255, .85) 10%, rgba(0, 0, 0, 0.49) 100%, rgba(0, 0, 0, 0.49) 100%);
     background-color: transparent; 
     color: white;
 }
 
-#app-mount .keybindShortcut-3zF1P9 span {
+#app-mount .combo-3PNrpQ span {
     color: white;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.33);
 }
 
-#app-mount .keybindShortcut-3zF1P9 span {
+#app-mount .combo-3PNrpQ span {
     background-image: radial-gradient(circle closest-side at 10px 10px, rgba(255, 255, 255, .85) 10%, rgba(42, 1, 155, 0.49) 100%, rgba(42, 1, 155, 0.49) 100%);
     background-color: transparent; 
     border: none;
     border-radius: 50px;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 {
+.theme-dark .combo-3PNrpQ {
     color: white;
 }
 
-.keybindShortcut-3zF1P9 {
+.combo-3PNrpQ {
     font-size: 14px;
     text-transform: capitalize;
 }
@@ -1712,13 +1712,13 @@
     color: white;
 }
 
-.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-2vcLsa .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53) !important;
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(0, 0, 0, 0.59) 100%, rgba(0, 0, 0, 0.59) 100%) !important;
 }
 
-.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), .topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(255, 204, 92, 0.49) 100%, rgba(255, 204, 92, 0.49) 100%);
@@ -3034,7 +3034,7 @@
     color: white;
 }
 
-.pinIcon-zVODC5 {
+.pinIcon-3I5-gm {
     background-color: black;
 }
 
@@ -3270,8 +3270,8 @@
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
@@ -3850,12 +3850,12 @@
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
+.top-Ktfr_T .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -4518,4 +4518,25 @@
 
 .resizeHandle-PBRzPC {
     background: none;
+}
+
+.stageUpsell-hekoJb {
+    border: 2px solid rgba(255, 255, 255, .2);
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.stageUpsellImage-2C_WNd {
+    background-color: transparent;
+}
+
+.permissionV3BannerContainer-3_4aSa {
+    background-color: black;
+}
+
+.permissionV3BannerContainer-3_4aSa a {
+    color: #B8E8E0;
+}
+
+.footer-IubaaS {
+    background-color: transparent;
 }
