--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 4.4
+ * @version 4.5
  */
 
  .app-2CXKsg {
@@ -179,23 +179,23 @@
     background-color: rgba(118, 171, 217, .70);
 }
 
-.theme-dark .dim-2Uxgxb span {
+.theme-dark .dim-GXxpGm span {
     background-color: #61a5d8;
     color: white;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span {
+.theme-dark .combo-3PNrpQ span {
     color: white;
     box-shadow: none;
 }
 
-.keybindShortcut-3zF1P9 span {
+.combo-3PNrpQ span {
     background-color: #61a5d8;
     border: 1px solid #76AAD9;
     border-radius: 6px;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 {
+.theme-dark .combo-3PNrpQ {
     color: white;
 }
 
@@ -203,13 +203,13 @@
     text-transform: capitalize;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span:active {
+.theme-dark .combo-3PNrpQ span:active {
     color: white;
     box-shadow: none;
     border: 2px outset #76AAD9;
 }
 
-.theme-dark .dim-2Uxgxb span:active {
+.theme-dark .dim-GXxpGm span:active {
     color: white;
 }
 
@@ -371,12 +371,12 @@
     opacity: 1;
 }
 
-.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), .topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: #76aad9;
     border: 2px outset #76aad9;
 }
 
-.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-2vcLsa .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-color: #61a5d8 !important;
     border: 2px inset #61a5d8 !important;
 } 
@@ -534,12 +534,12 @@
     color: white;
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N {
     background-color: rgba(74, 94, 221, .66);
     transition: background-color .6s;
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ:hover {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N:hover {
     background-color: rgba(31, 61, 255, .89);
 }
 
@@ -1067,7 +1067,7 @@
     background-color: #61A5D8 !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: var(--brand-500);"] {
+.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
     background-color: #76AAD9 !important;
 }
 
@@ -1085,16 +1085,16 @@
     box-shadow: none;
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM {
+.lookFilled-1H2Jvj.colorRed-2VFhM4 {
     background-color: rgba(176, 33, 33, .62);
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM:hover {
+.lookFilled-1H2Jvj.colorRed-2VFhM4:hover {
     background-color: #B02121;
     border: 2px outset #B02121;
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM:active {
+.lookFilled-1H2Jvj.colorRed-2VFhM4:active {
     background-color: #B02121;
     border: 2px inset #B02121;
 }
@@ -1274,17 +1274,17 @@
     background: rgba(97, 164, 216, .35);
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79 {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS {
     background-color: #00AD89 !important;
     opacity: .8;
     transition: opacity .2s ease-in;
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79:hover {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS:hover {
     opacity: 1;
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79:disabled {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS:disabled {
     background-color: #00AD89;
 }
 
@@ -1587,11 +1587,11 @@
     background-color: transparent;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, .top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:active, .top-Ktfr_T .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #61A5D8 !important;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: #76AAD9;
 }
 
@@ -1774,7 +1774,7 @@
     mask: none;
 }
 
-.avatarSpeaking-33RRJU {
+.avatarSpeaking-36V2PN {
     box-shadow: inset 0 0 0 3px #61A5D8,inset 0 0 0 3px black;
     border-radius: 4px;
 }
@@ -2844,8 +2844,8 @@
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
@@ -2977,7 +2977,7 @@
     background-color: rgba(0, 0, 0, .4);
 }
 
-.pinIcon-zVODC5,
+.pinIcon-3I5-gm,
 .tagsButton-4pwOKH {
     background-color: #61A5D8;
 }
@@ -3485,12 +3485,12 @@
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
+.top-Ktfr_T .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -4134,6 +4134,27 @@
 
 .resizeHandle-PBRzPC {
     background: none;
+}
+
+.stageUpsell-hekoJb {
+    border: 2px solid rgba(255, 255, 255, .2);
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.stageUpsellImage-2C_WNd {
+    background-color: transparent;
+}
+
+.permissionV3BannerContainer-3_4aSa {
+    background-color: black;
+}
+
+.permissionV3BannerContainer-3_4aSa a {
+    color: #B8E8E0;
+}
+
+.footer-IubaaS {
+    background-color: transparent;
 }
 /* Main Color */
 .main-color {color: #61A5D8;}
