--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 4.4
+ * @version 4.5
 */
 
 @import url("https://fonts.googleapis.com/css?family=Livvic&display=swap");
@@ -803,12 +803,12 @@ textarea,
 }
 
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ:hover {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N:hover {
     background-color: #2d62d5;
 }
 
-.lookFilled-yCfaCM.colorBrand-I6CyqQ,
-.lookFilled-yCfaCM.colorBrand-I6CyqQ:disabled {
+.lookFilled-1H2Jvj.colorBrand-2M3O3N,
+.lookFilled-1H2Jvj.colorBrand-2M3O3N:disabled {
     background-color: #4570e6;
     color: white;
 }
@@ -837,11 +837,11 @@ textarea,
     border-radius: 7px;
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79:hover {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS:hover {
     background-color: #4c9366;
 }
 
-.lookFilled-yCfaCM.colorGreen-3y-Z79 {
+.lookFilled-1H2Jvj.colorGreen-jIPCAS {
     color: #fff;
     background-color: #5fa778;
 }
@@ -999,7 +999,7 @@ textarea,
     background-color: transparent !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: var(--brand-500);"] {
+.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
     background-color: #008c99 !important;
 }
 
@@ -1066,25 +1066,25 @@ textarea,
     border-color: transparent;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span,
-.theme-dark .dim-2Uxgxb span {
+.theme-dark .combo-3PNrpQ span,
+.theme-dark .dim-GXxpGm span {
     color: white;
     box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.6) !important;
     border: none;
     background-color: #008c99;
 }
 
-.theme-dark .dim-2Uxgxb .key-N5VmHN {
+.theme-dark .dim-GXxpGm .key-RP8gj3 {
     background-color: #008c99;
     color: white;
 }
 
-.theme-dark .keybindShortcut-3zF1P9 span:active,
-.theme-dark .dim-2Uxgxb span:active {
+.theme-dark .combo-3PNrpQ span:active,
+.theme-dark .dim-GXxpGm span:active {
     color: #c5c5c6;
 }
 
-.keybindShortcut-3zF1P9 span {
+.combo-3PNrpQ span {
     border-radius: 6px;
 }
 
@@ -1520,7 +1520,7 @@ textarea,
     border-color: rgba(235, 44, 34, 0.811);
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM {
+.lookFilled-1H2Jvj.colorRed-2VFhM4 {
     background-color: #a41c15 !important;
     color: white !important;
 }
@@ -1530,7 +1530,7 @@ textarea,
     color: white;
 }
 
-.lookFilled-yCfaCM.colorRed-rQXKgM:hover {
+.lookFilled-1H2Jvj.colorRed-2VFhM4:hover {
     background-color: #d20f04 !important;
 }
 
@@ -1569,7 +1569,7 @@ textarea,
 }
 
 .side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy,
-.topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy,
+.topPill-2vcLsa .themed-qqoYp3.selected-1sf9UK.item-2GWPIy,
 .theme-dark .header-145e10 .tabBar-1qdMr5 .tab-TRrPC8.active-1grPyy {
     background-color: rgba(0, 140, 153, 0.57) !important;
     border: 2px solid #28818c !important;
@@ -1578,7 +1578,7 @@ textarea,
 }
 
 .side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover,
-.topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover {
+.topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover {
     background-color: rgba(0, 140, 153, 0.21);
     border: 2px solid rgba(0, 124, 137, 0.23);
     /* 2nd Color of Monochromatic Colors */
@@ -1586,7 +1586,7 @@ textarea,
 }
 
 .side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl),
-.topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
+.topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: rgba(0, 140, 153, 0.21);
     border: 2px solid rgba(0, 124, 137, 0.23);
 }
@@ -2320,12 +2320,12 @@ textarea,
     background-color: transparent;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:active,
-.top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:active,
+.top-Ktfr_T .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #008c99;
 }
 
-.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
+.top-Ktfr_T .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: white;
 }
 
@@ -2879,7 +2879,7 @@ textarea,
     color: white;
 }
 
-.pinIcon-zVODC5 {
+.pinIcon-3I5-gm {
     background-color: black;
 }
 
@@ -3064,8 +3064,8 @@ textarea,
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
@@ -3638,12 +3638,12 @@ textarea,
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
+.top-Ktfr_T .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
+.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -4322,4 +4322,25 @@ textarea,
 
 .resizeHandle-PBRzPC {
     background: none;
+}
+
+.stageUpsell-hekoJb {
+    border: 2px solid rgba(255, 255, 255, .2);
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.stageUpsellImage-2C_WNd {
+    background-color: transparent;
+}
+
+.permissionV3BannerContainer-3_4aSa {
+    background-color: black;
+}
+
+.permissionV3BannerContainer-3_4aSa a {
+    color: #B8E8E0;
+}
+
+.footer-IubaaS {
+    background-color: transparent;
 }
